--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-use/* Start Global Rules */
+/* Start Global Rules */
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lugrasimo&display=swap");
@@ -500,9 +500,9 @@ header .nav-menu a:hover {
   display: inline-block;
 }
 @media (max-width: 991px) {
-.services .content {
-  grid-template-columns: 1fr 1fr;
-}
+  .services .content {
+    grid-template-columns: 1fr 1fr;
+  }
   .services .box p {
     text-align: center;
   }
@@ -622,6 +622,141 @@ header .nav-menu a:hover {
   }
 }
 /*  End feature section */
+/*  Start founders section */
+.founders {
+  padding: var(--setion-padding) 0;
+  position: relative;
+}
+.founders h2 {
+  color: var(--section-title-color);
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 50px;
+}
+.founders h2 + p {
+  text-align: center;
+  margin: auto;
+  width: fit-content;
+}
+.founders h2 span {
+  background-image: linear-gradient(90deg, #fc575c 0%, #00f2ff 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.founders .container .slider-track:hover {
+  animation-play-state: paused;
+}
+.founders .container::after,
+.founders .container::before {
+  content: "";
+  height: 80%;
+  position: absolute;
+  width: 15%;
+  z-index: 2;
+  bottom: 0;
+}
+.founders .container::before {
+  background: linear-gradient(
+    to right,
+    var(--background-color) 20%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  left: 0;
+}
+.founders .container::after {
+  background: linear-gradient(
+    to left,
+    var(--background-color) 20%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  right: 0;
+}
+.founders .container .slider-track {
+  overflow: hidden;
+  position: relative;
+  height: 500px;
+  width: calc(300px * 10);
+  animation: scroll 40s linear infinite;
+}
+.founders .container .slider {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100%;
+  display: flex;
+  will-change: transform;
+  padding: var(--setion-padding);
+}
+.founders .container .card {
+  width: 300px;
+  height: 400px;
+  position: relative;
+  flex: 1;
+  margin: 0 15px;
+  transition: transform 0.5s ease-in-out;
+}
+.founders .container .card:hover {
+  transform: scale(1.05);
+}
+.founders .container .card:hover::before {
+  height: 100%;
+  opacity: 0.5;
+  box-shadow: none;
+}
+.founders .container .card::before {
+  transition-duration: 0.5s;
+  content: "";
+  width: 100%;
+  height: 10px;
+  background-color: var(--background-color);
+  position: absolute;
+  bottom: 0;
+  box-shadow: 0 0 50px 50px var(--background-color);
+}
+.founders .container .card .image {
+  width: 300px;
+  height: 400px;
+}
+.founders .container .card img {
+  width: 98%;
+  height: 95%;
+  position: relative;
+  left: 1%;
+  top: 2.5%;
+  z-index: -1;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+}
+.founders .container .card h3 {
+  color: var(--section-title-color);
+  position: absolute;
+  bottom: 10px;
+  left: 15px;
+  z-index: 1;
+}
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-300px * 5));
+  }
+}
+@media (max-width: 767.98px) {
+  .founders h2 {
+    font-size: 30px;
+  }
+  .founders .container .card .image {
+    width: 250px;
+    aspect-ratio: 4/3;
+  }
+  .founders .container .card h3 {
+    font-size: 1rem;
+    bottom: 20px;
+  }
+}
+/*  End founders section */
 /* Start CTA Section */
 .cta {
   background: linear-gradient(
