--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -632,11 +632,15 @@ header .nav-menu a:hover {
   margin-bottom: 20px;
   text-align: center;
   font-size: 50px;
+  position: relative;
+  z-index: 3;
 }
 .founders h2 + p {
   text-align: center;
   margin: auto;
   width: fit-content;
+  position: relative;
+  z-index: 3;
 }
 .founders h2 span {
   background-image: linear-gradient(90deg, #fc575c 0%, #00f2ff 100%);
@@ -644,15 +648,15 @@ header .nav-menu a:hover {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.founders .container .slider-track:hover {
-  animation-play-state: paused;
+.founders .container {
+  overflow: hidden;
 }
 .founders .container::after,
 .founders .container::before {
   content: "";
-  height: 80%;
+  height: 100%;
   position: absolute;
-  width: 15%;
+  width: 45%;
   z-index: 2;
   bottom: 0;
 }
@@ -671,6 +675,9 @@ header .nav-menu a:hover {
     rgba(255, 255, 255, 0) 100%
   );
   right: 0;
+}
+.founders .container .slider-track:hover {
+  animation-play-state: paused;
 }
 .founders .container .slider-track {
   overflow: hidden;
