--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -656,14 +656,14 @@ header .nav-menu a:hover {
   content: "";
   height: 100%;
   position: absolute;
-  width: 45%;
+  width: 15%;
   z-index: 2;
   bottom: 0;
 }
 .founders .container::before {
   background: linear-gradient(
     to right,
-    var(--background-color) 20%,
+    var(--background-color) 60%,
     rgba(255, 255, 255, 0) 100%
   );
   left: 0;
@@ -671,7 +671,7 @@ header .nav-menu a:hover {
 .founders .container::after {
   background: linear-gradient(
     to left,
-    var(--background-color) 20%,
+    var(--background-color) 60%,
     rgba(255, 255, 255, 0) 100%
   );
   right: 0;
@@ -697,9 +697,8 @@ header .nav-menu a:hover {
 }
 .founders .container .card {
   width: 300px;
-  height: 400px;
+  aspect-ratio: 3/4;
   position: relative;
-  flex: 1;
   margin: 0 15px;
   transition: transform 0.5s ease-in-out;
 }
@@ -709,25 +708,24 @@ header .nav-menu a:hover {
 .founders .container .card:hover::before {
   height: 100%;
   opacity: 0.5;
-  box-shadow: none;
 }
 .founders .container .card::before {
   transition-duration: 0.5s;
   content: "";
   width: 100%;
-  height: 10px;
+  height: 0px;
   background-color: var(--background-color);
   position: absolute;
   bottom: 0;
   box-shadow: 0 0 50px 50px var(--background-color);
 }
 .founders .container .card .image {
-  width: 300px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
 }
 .founders .container .card img {
-  width: 98%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   position: relative;
   left: 1%;
   top: 2.5%;
@@ -754,9 +752,12 @@ header .nav-menu a:hover {
   .founders h2 {
     font-size: 30px;
   }
-  .founders .container .card .image {
-    width: 250px;
-    aspect-ratio: 4/3;
+  .founders .container::after,
+  .founders .container::before {
+    width: 20%;
+  }
+  .founders .container .card {
+    width: 500px;
   }
   .founders .container .card h3 {
     font-size: 1rem;
