--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -672,6 +672,10 @@ header .nav-menu a:hover {
   flex-basis: 40%;
   height: 100%;
 }
+.founders .content .slider .author:nth-child(1) .image img {
+  padding: 50px;
+  animation: loading 4s infinite ;
+}
 .founders .content .slider .author .image img {
   width: 100%;
   height: 100%;
@@ -685,7 +689,7 @@ header .nav-menu a:hover {
   justify-content: space-between;
 }
 .founders .content .slider .author .text p {
-  line-height: 1.5;
+  line-height: 1.8;
 }
 .founders .content .slider .author .text .name {
   color: var(--section-title-color);
@@ -702,6 +706,7 @@ header .nav-menu a:hover {
   transform: translateY(50%);
 }
 .founders .content .nav li {
+  overflow: hidden;
   cursor: pointer;
   transition-duration: 0.3s;
 }
@@ -709,11 +714,15 @@ header .nav-menu a:hover {
 .founders .content .nav li.active {
   transform: scale(1.1);
 }
+.founders .content .nav li:nth-child(1) img {
+  padding: 10px;
+}
 .founders .content .nav img {
+  background-color: var(--section-color);
+  border-radius: 50%;
+  border: 1px solid var(--main-color);
   width: 50px;
   height: 50px;
-  border: 1px solid var(--main-color);
-  border-radius: 50%;
 }
 
 @media (max-width: 767px) {
@@ -735,6 +744,9 @@ header .nav-menu a:hover {
   .founders .content .nav img {
     width: 35px;
     height: 35px;
+  }
+  .founders .content .nav li:nth-child(1) img {
+    padding: 5px;
   }
 }
 /*  End founders section */
