--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,27 +3,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lugrasimo&display=swap");
 :root {
-  --main-color: #fc575c;
-  --gradient-color: linear-gradient(90deg, #b755c1 0%, #fc575c 100%);
-  --second-gradient-color: linear-gradient(90deg, #8390fa 0%, #1d2f6f 100%);
+  --main-color: rgb(252, 87, 92);
+  --gradient-color: linear-gradient(
+    270deg,
+    var(--third-color) 0%,
+    var(--main-color) 100%
+  );
+  --second-gradient-color: linear-gradient(
+    90deg,
+    #8390fa 0%,
+    var(--second-color) 100%
+  );
   --third-gradient-color: linear-gradient(
     90deg,
-    rgb(255, 61, 99) 0%,
-    rgb(248, 139, 75) 100%
+    var(--main-color) 0%,
+    var(--first-color) 100%
   );
   --forth-gradient-color: linear-gradient(
     90deg,
-    #b027c0 40%,
-    rgb(0, 242, 255) 100%
+    var(--third-color) 40%,
+    var(--forth-color) 100%
   );
   --fifth-gradient-color: linear-gradient(
     90deg,
     var(--main-color) 40%,
-    rgb(0, 242, 255) 100%
+    var(--forth-color) 100%
   );
-  --first-color: #f88b4b;
-  --second-color: #1d2f6f;
-  --third-color: #b027c0;
+  --first-color: rgb(248, 139, 75);
+  --second-color: rgb(29, 47, 111);
+  --third-color: rgb(175, 39, 190);
   --forth-color: rgb(0, 242, 255);
   --section-title-color: white;
   --background-color: black;
@@ -146,6 +154,19 @@ a {
   }
 }
 /* End Loading */
+/* Start Section Animation */
+.hidden {
+  opacity: 0;
+  filter: blur(3px);
+  transform: translateX(-100%);
+  transition: all 2s;
+}
+.show {
+  opacity: 1;
+  filter: blur(0px);
+  transform: translate(0);
+}
+/* End Section Animation */
 /* Start header */
 header {
   position: fixed;
@@ -314,14 +335,64 @@ header .nav-menu a:hover {
 }
 /* End header */
 /* Start landing */
-#home .content {
-  width: clamp(300px, 50%, 800px);
+#home {
+  position: relative;
+}
+.waves {
+  position: absolute;
+  width: 100%;
+  height: 35vh;
+  bottom: 0;
+  right: 0;
+  /* transform: rotate(180deg); */
+  margin-bottom: -7px; /*Fix for safari gap*/
+  min-height: 100px;
+  max-height: 150px;
+}
+/* Animation */
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+  height: 3000px !important;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    transform: translate3d(85px, 0, 0);
+  }
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height: 25vh;
+    min-height: 25vh;
+  }
+  #home .content {
+    height: 30vh;
+  }
 }
 #home .container {
-  padding: 250px 0 150px;
+  padding: 200px 0 100px;
   position: relative;
   margin: 0 auto;
-  height: calc(100vh - 90px);
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -373,7 +444,8 @@ header .nav-menu a:hover {
 }
 #home .btn a {
   color: white;
-  background-image: linear-gradient(90deg, #74247d 0%, #fc575c 100%);
+  /* background-image: linear-gradient(270deg, #74247d 0%, #fc575c 100%); */
+  background: var(--gradient-color);
   background-size: 150% 150%;
   padding: 10px 30px;
   font-weight: 600;
@@ -383,7 +455,7 @@ header .nav-menu a:hover {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  animation: gradient 2s ease infinite;
+  /* animation: gradient 2s ease infinite; */
 }
 #home .links {
   margin-top: 40px;
@@ -422,7 +494,7 @@ header .nav-menu a:hover {
 }
 @media (max-width: 991px) {
   #home {
-    margin: 150px 0 0;
+    height: 100vh;
   }
   #home .container {
     flex-direction: column;
@@ -452,11 +524,7 @@ header .nav-menu a:hover {
     flex-direction: column;
   }
   .section-img {
-    max-width: 90%;
-    margin: 50px 0;
-  }
-  .section-img {
-    height: 200px;
+    display: none;
   }
 }
 .section-img {
@@ -466,7 +534,7 @@ header .nav-menu a:hover {
 /* End landing */
 /* Start Features */
 .services {
-  padding: var(--setion-padding) 0;
+  padding: 100px 0;
 }
 .services h2 {
   color: var(--section-title-color);
@@ -494,7 +562,6 @@ header .nav-menu a:hover {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 20px;
   gap: 15px;
 }
 .services .box i {
@@ -527,14 +594,14 @@ header .nav-menu a:hover {
     align-items: center;
   }
   .services .box h3 {
-    margin: 30px 0;
+    margin: 15px 0;
     text-align: center;
   }
 }
 /* End Features */
 /* Start feature section */
 .feature {
-  padding: var(--setion-padding) 0 100px;
+  padding: 100px 0;
   position: relative;
   display: flex;
   justify-content: space-around;
@@ -674,7 +741,7 @@ header .nav-menu a:hover {
 }
 .founders .content .slider .author:nth-child(1) .image img {
   padding: 50px;
-  animation: loading 4s infinite ;
+  animation: loading 4s infinite;
 }
 .founders .content .slider .author .image img {
   width: 100%;
@@ -919,48 +986,6 @@ header .nav-menu a:hover {
   }
 }
 /* End Contact Section */
-/* Start footer */
-footer {
-  padding: 20px;
-  color: #ffffff;
-}
-footer {
-  display: flex;
-  justify-content: center;
-}
-footer p {
-  width: fit-content;
-}
-footer a {
-  font-family: "Lugrasimo", cursive;
-  background-image: var(--gradient-color);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: bolder;
-  color: var(--main-color);
-}
-footer img {
-  position: relative;
-  top: 6px;
-}
-footer i {
-  margin-left: 20px;
-  color: white;
-}
-footer i:hover {
-  color: var(--main-color);
-}
-@media (max-width: 767px) {
-  footer {
-    flex-direction: column;
-    align-items: center;
-  }
-  footer .links {
-    margin-top: 25px;
-  }
-}
-/* End footer */
 /* Start About Section */
 #about {
   background-color: var(--section-color);
@@ -1224,3 +1249,46 @@ footer i:hover {
   }
 }
 /* End coming soon section */
+/* Start footer */
+footer {
+  padding: 20px;
+  color: var(--section-title-color);
+  box-shadow: 0 0px 5px 0 var(--third-color);
+}
+footer {
+  display: flex;
+  justify-content: center;
+}
+footer p {
+  width: fit-content;
+}
+footer a {
+  font-family: "Lugrasimo", cursive;
+  background-image: var(--gradient-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bolder;
+  color: var(--main-color);
+}
+footer img {
+  position: relative;
+  top: 6px;
+}
+footer i {
+  margin-left: 20px;
+  color: white;
+}
+footer i:hover {
+  color: var(--main-color);
+}
+@media (max-width: 767px) {
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+  footer .links {
+    margin-top: 25px;
+  }
+}
+/* End footer */
